<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>mrmathami.cia.cpp</groupId>
	<artifactId>mrmathami.cia.cpp.core</artifactId>
	<packaging>jar</packaging>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>mrmathami</groupId>
			<artifactId>mrmathami.utils</artifactId>
			<version>1.0.1</version>
		</dependency>

		<!-- region Eclipse CDT -->
		<dependency>
			<groupId>org.eclipse.cdt</groupId>
			<artifactId>org.eclipse.cdt.core</artifactId>
			<version>7.0.1-SNAPSHOT</version>
		</dependency>
		<!-- endregion Eclipse CDT -->

		<!-- region jCPP -->
		<dependency>
			<groupId>com.github.albfernandez</groupId>
			<artifactId>juniversalchardet</artifactId>
			<version>2.4.0</version>
		</dependency>
		<!-- endregion jCPP -->

		<!--<dependency>-->
		<!--	<groupId>org.ini4j</groupId>-->
		<!--	<artifactId>ini4j</artifactId>-->
		<!--	<version>0.5.4</version>-->
		<!--</dependency>-->
	</dependencies>


	<build>
		<directory>${project.basedir}/build/target-${project.build.finalName}</directory>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.8.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>3.0.0-M1</version>
				<executions>
					<execution>
						<id>install-cdt-local</id>
						<phase>validate</phase>
						<configuration>
							<groupId>org.eclipse.cdt</groupId>
							<artifactId>org.eclipse.cdt.core</artifactId>
							<version>7.0.1-SNAPSHOT</version>
							<packaging>jar</packaging>
							<file>${project.basedir}/lib/org.eclipse.cdt.core-7.0.1-SNAPSHOT.jar</file>
							<sources>${project.basedir}/lib/org.eclipse.cdt.core-7.0.1-SNAPSHOT-sources.jar</sources>
							<pomFile>${project.basedir}/lib/org.eclipse.cdt.core-7.0.1-SNAPSHOT.pom</pomFile>
						</configuration>
						<goals>
							<goal>install-file</goal>
						</goals>
					</execution>
					<execution>
						<id>install-cdt-external</id>
						<phase>validate</phase>
						<configuration>
							<groupId>org.eclipse.cdt</groupId>
							<artifactId>org.eclipse.cdt.core</artifactId>
							<version>7.0.1-SNAPSHOT</version>
							<packaging>jar</packaging>
							<file>${project.basedir}/lib/org.eclipse.cdt.core-7.0.1-SNAPSHOT.jar</file>
							<sources>${project.basedir}/lib/org.eclipse.cdt.core-7.0.1-SNAPSHOT-sources.jar</sources>
							<pomFile>${project.basedir}/lib/org.eclipse.cdt.core-7.0.1-SNAPSHOT.pom</pomFile>
							<localRepositoryPath>repository</localRepositoryPath>
						</configuration>
						<goals>
							<goal>install-file</goal>
						</goals>
					</execution>

					<execution>
						<id>install-local</id>
						<phase>install</phase>
						<goals>
							<goal>install-file</goal>
						</goals>
						<configuration>
							<file>${project.build.directory}/${project.build.finalName}.jar</file>
							<sources>${project.build.directory}/${project.build.finalName}-sources.jar</sources>
							<pomFile>${project.basedir}/pom-no-build.txt</pomFile>
						</configuration>
					</execution>
					<execution>
						<id>install-external</id>
						<phase>install</phase>
						<goals>
							<goal>install-file</goal>
						</goals>
						<configuration>
							<file>${project.build.directory}/${project.build.finalName}.jar</file>
							<sources>${project.build.directory}/${project.build.finalName}-sources.jar</sources>
							<pomFile>${project.basedir}/pom-no-build.txt</pomFile>
							<localRepositoryPath>repository</localRepositoryPath>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<compilerArgs>
						<arg>-Xlint:all,-processing</arg>
					</compilerArgs>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>

			<!--<plugin>-->
			<!--	<groupId>org.apache.maven.plugins</groupId>-->
			<!--	<artifactId>maven-jar-plugin</artifactId>-->
			<!--	<version>3.2.0</version>-->
			<!--	<configuration>-->
			<!--		<archive>-->
			<!--			<manifestEntries>-->
			<!--				<Main-Class>mrmathami.cia.cpp.Main</Main-Class>-->
			<!--			</manifestEntries>-->
			<!--		</archive>-->
			<!--	</configuration>-->
			<!--</plugin>-->
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>my-repo</id>
			<name>MrMaThaMi personal Repo</name>
			<url>https://raw.githubusercontent.com/thanhminhmr/repository/main/</url>
		</repository>
	</repositories>
</project>